--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Simple Index</title>
+    <title>MrCyberRick</title>
     <style>
         body {
             font-family: sans-serif;
@@ -38,9 +38,9 @@
     <p>Newsletter links:</p>
 
     <ul>
-        <li><a href="https://mrcyberrick.github.io/weekly-pull-feed/newsletter.html">Weekly Previews Newsletter</a></li>
+        <li><a href="https://mrcyberrick.github.io/weekly-pull-feed/newsletter.html">Weekly Previews Newsletter Web</a></li>
         <li><a href="https://mrcyberrick.github.io/weekly-pull-feed/newsletter-email.html">Weekly Previews Newsletter Email</a></li>
-        <li><a href="https://mrcyberrick.github.io/weekly-pull-feed/rss.xml">Weekly Previews RSS Feed</a></li>
+        <li><a href="https://mrcyberrick.github.io/weekly-pull-feed/rss.xml">Weekly Previews Newsletter RSS/a></li>
     </ul>
 
 </body>
