--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
     <ul>
         <li><a href="https://mrcyberrick.github.io/weekly-pull-feed/newsletter.html">Weekly Previews Newsletter - Web</a></li>
-        <li><a href="https://mrcyberrick.github.io/weekly-pull-feed/newsletter-email.html">Weekly Previews Newsletter - Email</a></li>
+        <li><a href="https://raw.githubusercontent.com/mrcyberrick/weekly-pull-feed/main/newsletter-email.html">Weekly Previews Newsletter - Email</a></li>
         <li><a href="https://mrcyberrick.github.io/weekly-pull-feed/rss.xml">Weekly Previews Newsletter - RSS</a></li>
     </ul>
 
